syntax = "proto3";
option go_package = "github.com/coop-cmpers/what2do-protobufs-go";
package helloworld.v1;

service HelloWorldService {
  rpc HelloWorld(HelloWorldRequest) returns (HelloWorldResponse) {}
}

message HelloWorldRequest {}

message HelloWorldResponse {
  string message = 1;
}