syntax = "proto3";
option go_package = "github.com/coop-cmpers/what2do-protobufs-go";
package helloworld.v1;

import "helloworld/v1/hello-backend.proto";
import "helloworld/v1/hello-db.proto";

service HelloWorldService {
  rpc HelloBackend(HelloBackendRequest) returns (HelloBackendResponse) {}
  rpc HelloDB(HelloDBRequest) returns (HelloDBResponse) {}
}